# webtoolkit

./: .gitignore  LICENSE  pyproject.toml
src/django_project/: .env.sample  justfile  manage.py  runprod.sh
src/django_project/core/: admin.py  models.py  urls.py  views.py
src/django_project/core/migrations/: 0001_initial.py  0002_uploadedfile.py
src/django_project/core/templates/core/: _base_body.html  file_hosting.html  home.html  register.html  url_shortener.html
src/django_project/core/templates/core/include/: base.html
src/django_project/core/templates/registration/: login.html
src/django_project/core/utils/: common.py  statistics.py  url_shortener.py
src/django_project/django_project/: settings.py  urls.py  wsgi.py
src/django_project/static/core/: output.css
