[project]
name = "webtoolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.*",
    "django-extensions>=4.1",
    "django-stubs==5.2.*",
    "django-taggit>=6.1.0",
    "environs[django]>=14.5.0",
    "ipython>=9.7.0",
]
